test/reverseSquare15.slq

def h[Ï„,n:!â„•](x:!Ï„,b:ğ”¹^n)mfreeâ‡’b;

def main(){
	z:=reverse(h); /// error
}
